--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,10 @@ const {
         <meta property="twitter:image" content={ image } />
         <meta property="article:publisher" content="" />
         <link rel="icon" href="">
+
+        <!-- FONTS -->
+        <link rel="preconnect" href="https://fonts.bunny.net">
+        <link href="https://fonts.bunny.net/css?family=inter:400" rel="stylesheet" />
     </head>
     <body class="">
         <slot />
