--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,14 @@
 ---
+
+// LAYOUTS
 import Layout from "@/layouts/Layout.astro"
-import "@/styles/globals.css"
+
+// COMPONENTS
 import Footer from "@/components/common/footer/index.astro"
+import RightsReserved from "@/components/home/rights-reserved/index.astro"
+
 ---
 <Layout>
+	<RightsReserved />
 	<Footer/>
 </Layout>
