--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,14 @@ import Layout from "@/layouts/Layout.astro"
 
 // COMPONENTS
 import Footer from "@/components/common/footer/index.astro"
+
 import RightsReserved from "@/components/home/rights-reserved/index.astro"
+import StrategyCall from "@/components/home/strategy-call/index.astro"
 
 ---
 <Layout>
+	<StrategyCall />
 	<RightsReserved />
 	<Footer/>
 </Layout>
+
