--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,9 +35,9 @@ const {
 
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.bunny.net">
-        <link href="https://fonts.bunny.net/css?family=inter:400,500" rel="stylesheet" />
+        <link href="https://fonts.bunny.net/css?family=inter:400,500|roboto-condensed:700" rel="stylesheet" />
     </head>
-    <body class="">
+    <body class="antialiased">
         <slot />
     </body>
 </html>
