--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,10 @@ import Footer from "@/components/common/footer/index.astro"
 
 import RightsReserved from "@/components/home/rights-reserved/index.astro"
 import StrategyCall from "@/components/home/strategy-call/index.astro"
-
+import HowWeWork from "@/components/home/how-we-work/index.astro"
 ---
 <Layout>
+	<HowWeWork />
 	<StrategyCall />
 	<RightsReserved />
 	<Footer/>
