--- a/src/atoms/heading/one/index.astro
+++ b/src/atoms/heading/one/index.astro
@@ -1,3 +1,3 @@
-<h1 class="text-6xl font-roboto_condensed uppercase">
+<h1 class="text-6xl font-roboto_condensed uppercase text-black">
     <slot />
 </h1>
